--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,11 +6,11 @@
 				<a href="#">About</a>
 				<ul class="dl-submenu">
 					<li>
-						<img src="{{ site.url }}/{{ site.logo }}" alt="{{ site.title }} photo" class="author-photo">
+						<!-- Code for logo in nav bar <img src="{{ site.url }}/{{ site.logo }}" alt="{{ site.title }} photo" class="author-photo"> -->
 						<h4>{{ site.title }}</h4>
 						<p>{{ site.description }}</p>
 					</li>
-					<li><a href="{{ site.url }}/about/"><span class="btn btn-inverse">Learn More</span></a></li>
+					<li><center><a href="{{ site.url }}/CV/"><span class="btn btn-inverse">CV</span></a></center></li>
 					{% if site.email %}<li>
                         <a href="mailto:{{ site.email }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-envelope-square"></i> Email</a>
                     </li>{% endif %}
